# xdrgen

.github/workflows/: ruby.yml
lib/xdrgen/generators/rust/: Cargo.toml
